# tinyshell

./: CMakeLists.txt  LICENSE
tinyshell/: builtin.c  execute.c  redirection.c  tinyshell.c  tinyshell.h
